@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.297.2.8 2012/01/08 23:46:29 sfeam Exp $
+dnl $Id: configure.in,v 1.297.2.9 2012/01/19 07:03:27 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -1135,9 +1135,6 @@ if test "${enable_qt}" = yes ; then
   if test $pkg_failed != no; then
     AC_MSG_WARN([The Qt terminal will not be compiled.])
     enable_qt_ok=no
-  else
-    PKG_CHECK_MODULES_NOFAIL(QTVER, [QtCore >= 4.7],
-        AC_DEFINE(HAVE_QT_47, 1, [Qt version at least 4.7]),)
   fi
 fi
 
@@ -1147,6 +1144,12 @@ if test "${enable_qt_ok}" = yes ; then
 
   CPPFLAGS="$CPPFLAGS $QT_CFLAGS"
   CXXFLAGS="$CXXFLAGS $QT_CXXFLAGS"
+
+  dnl Compile Objective C Cocoa headers on Mac to hide the gnuplot icon from the dock
+  if test "$is_apple" = yes; then
+    CXXFLAGS="$CXXFLAGS -ObjC"
+  fi
+
   QT4LOC=`$PKG_CONFIG --variable=exec_prefix QtCore`
   MOC=`$PKG_CONFIG --variable=moc_location QtCore`
   if test x"$MOC" = x; then
